--- a/src/styles/request-view.css
+++ b/src/styles/request-view.css
@@ -78,6 +78,7 @@
   flex-grow: 1;
   padding: 10px;
   border-top: 1px solid var(--color-border);
+  overflow: auto;
 }
 
 .response-header {
